# conways-game-of-life

./: CMakeLists.txt  README.md
src/: CellMatrix.cpp  CellMatrix.h  Game.cpp  Game.h  main.cpp
